src/main/java/com/example/common/error/Exception404.java
package com.example.common.error;

public class Exception404 extends RuntimeException{
   public Exception404(String msg) {
        super(msg);
    }
}
